update email templates

--- a/database/templates/admin-import-failure-email.html
+++ b/database/templates/admin-import-failure-email.html
@@ -12,8 +12,13 @@
     <p>The Methylscape data import initiated on <b><%- date %></b> failed.</p>
     <pre><%- error %></pre>
     <p>
-      For more information, including any log events preceding this error, please visit the Methylscape Data Import page
+      For more information, including any log events preceding this error, please visit the
+      <a href="<%= dataImportLink %>">Methylscape Data Import page</a>
       under the admin dashboard.
+    </p>
+    <p>
+      Sincerely,<br />
+      Methylscape Web Admin Team
     </p>
   </body>
 </html>
