--- a/database/templates/admin-import-success-email.html
+++ b/database/templates/admin-import-success-email.html
@@ -10,6 +10,13 @@
   <body>
     Dear Administrator, <br />
     <p>The Methylscape data import initiated on <b><%- date %></b> succeeded.</p>
-    <p>For more information, please visit the Methylscape Data Import page under the admin dashboard.</p>
+    <p>
+      For more information, please visit <a href="<%= dataImportLink %>">here</a> and go to Methylscape Data Import page
+      under the admin dashboard.
+    </p>
+    <p>
+      Sincerely,<br />
+      Methylscape Web Admin Team
+    </p>
   </body>
 </html>
