--- a/database/templates/admin-import-failure-email.html
+++ b/database/templates/admin-import-failure-email.html
@@ -13,7 +13,9 @@
     <pre><%- error %></pre>
     <p>
       For more information, including any log events preceding this error, please visit the
-      <a href="<%= dataImportLink %>">Methylscape Data Import page</a>
+      <a href="<%- baseUrl %>/api/login?destination=%2Fadmin%2Fdata-import" target="_blank"
+        >Methylscape Data Import page</a
+      >
       under the admin dashboard.
     </p>
     <p>
