--- a/client/src/styles/overrides.scss
+++ b/client/src/styles/overrides.scss
@@ -1,29 +1,20 @@
-.legend {
-  font-size: 1rem;
-  white-space: nowrap;
-}
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
 
-legend {
-  float: none;
-  width: inherit;
-}
+$utilities: map-merge(
+  $utilities,
+  (
+    "border":
+      map-merge(
+        map-get($utilities, "border"),
+        (
+          responsive: true,
+        )
+      ),
+  )
+);
 
-.card.card-link {
-  cursor: pointer;
-  transition: all 0.1s;
-  &.card-accent-primary {
-    border-top: 6px $primary solid;
-    .bi {
-      color: $blue-400;
-      transition: all 0.1s;
-    }
-    &:hover {
-      color: $blue-600;
-      border-top-color: $blue-400;
-      box-shadow: 0 0.75rem 1.5rem rgba($black, 0.15);
-      .bi {
-        color: $green;
-      }
-    }
-  }
-}
+@import "bootstrap/scss/utilities/api";
