use original secondary css colors

--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -25,7 +25,7 @@ a,
   &.active {
     color: $body-color;
     border-color: transparent;
-    border-bottom-color: $secondary;
+    border-bottom-color: $green;
   }
 }
 
