--- a/client/src/styles/bootstrap-variables.scss
+++ b/client/src/styles/bootstrap-variables.scss
@@ -69,11 +69,11 @@ $spacers: (
 );
 
 // Borders
-$btn-border-radius: 2rem;
-$btn-border-radius-sm: 2rem;
-$input-border-radius: 2rem;
-$input-border-radius-sm: 2rem;
-$input-border-color: $green;
+// $btn-border-radius: 2rem;
+// $btn-border-radius-sm: 2rem;
+// $input-border-radius: 2rem;
+// $input-border-radius-sm: 2rem;
+// $input-border-color: $green;
 $component-active-bg: $green;
 
 //form
