add justification field to user registration

--- a/server/templates/admin-user-registration-review.html
+++ b/server/templates/admin-user-registration-review.html
@@ -30,6 +30,10 @@
       <%- userEmail %>
     </div>
     <div>
+      <strong>Justification:</strong>
+      <%- userJustification %>
+    </div>
+    <div>
       <strong>Organization:</strong>
       <%- organizationName %>
     </div>
