set minimum body height

--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -87,6 +87,7 @@ legend {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  min-height: 1100px;
 }
 
 .loader {
